fixed gif problem of being on top of the products and blocking them. Fixed margin problem with overflow so parent doesnt move on child's margin

--- a/client/src/components/productPage/productLayout/style.css
+++ b/client/src/components/productPage/productLayout/style.css
@@ -4,6 +4,7 @@
     overflow:auto; 
     background-image: url("./assets/embossed-diamond.png");
     display: table;
+    z-index: -5;
 }
 
 .productColor {
@@ -11,6 +12,8 @@
     width: 100%;
     background-image:-webkit-linear-gradient(90deg, rgba(15, 15, 15, 0.87), rgba(22, 59, 90, 0.856));
     background-image:(90deg, rgba(15, 15, 15, 0.87), rgba(22, 59, 90, 0.856));;
+    overflow: hidden;
+  
 }
 
 @media only screen and (max-width: 1056px) {
