--- a/client/src/components/productPage/products/style.css
+++ b/client/src/components/productPage/products/style.css
@@ -6,7 +6,7 @@
     margin: 0 auto;              
     left: 0;
     right: 0;
-   margin-bottom: 0;
+    margin-top: 100px;
 }
 .productOne {
     font-family: 'Lexend Tera', sans-serif;
@@ -16,21 +16,11 @@
     height: 422;
     box-shadow: 10px 10px 20px 2px #88888877;
     float: left;
-    z-index: 6;
+    z-index: 10;
     margin-right: 20px;
-    margin-top: 100px;
+    background-image: url("./assets/gif2.gif");
 }
-
-.productBackImg {
-    width: 322px;
-    height: 415px;
-    z-index: -1;
-    position: absolute;
-    margin-top: -315px;
-    margin-left: -10px;
-}
-
-
+ 
 .productTwo {
     font-family: 'Lexend Tera', sans-serif;
     width: 300px; 
@@ -41,8 +31,8 @@
     box-shadow: 10px 10px 20px 2px #88888877;
     float: left;
     margin-right: 20px;
-    margin-top: 100px;
-    z-index: 6;
+    
+    background-image: url("./assets/gif2.gif");
 }
 
 
@@ -54,8 +44,9 @@
     height: 422;
     box-shadow: 10px 10px 20px 2px #88888877;
     float: left;
-    margin-top: 100px;
+    
     z-index: 6;
+    background-image: url("./assets/gif2.gif");
 }
 
 .productImg {
@@ -92,7 +83,7 @@
         margin: 0 auto;              
         left: 0;
         right: 0;
-        margin-top: 0px;
+        margin-top: 10px;
     }
     .productOne {
         float: none;
@@ -100,17 +91,20 @@
         margin: 0 auto;              
         left: 0;
         right: 0;
+        margin-bottom: 20px;
     }
     .productTwo {
         float: none;
         margin: 0 auto;              
         left: 0;
         right: 0;
+        margin-bottom: 20px;
     }
     .productThree {
         float: none;
         margin: 0 auto;              
         left: 0;
         right: 0;
+        margin-bottom: 20px;
     }
   }
